// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookBanner renders correctly when you pass a page and book 1`] = `
Array [
  <div
    className="BookBanner__BarWrapper-sc-1avy0c0-4 bkrvJS"
    data-testid="bookbanner"
  >
    <div
      className="BookBanner__TopBar-sc-1avy0c0-1 jVswHX"
    >
      <a
        className="BookBanner__BookTitle-sc-1avy0c0-2 ktsTvJ"
        href="/details/books/book-slug-1"
      >
        <svg
          aria-hidden="true"
          className="BookBanner__LeftArrow-sc-1avy0c0-0 eRQNag StyledIconBase-sc-bdy9j4 jbPeIR"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
          />
        </svg>
        Test Book 1
      </a>
      <h1
        className="BookBanner__BookChapter-sc-1avy0c0-3 iaWgjJ"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
      />
    </div>
  </div>,
  <div
    className="BookBanner__BarWrapper-sc-1avy0c0-4 iUxieC"
  >
    <div
      className="BookBanner__TopBar-sc-1avy0c0-1 jVswHX"
    >
      <a
        className="BookBanner__BookTitle-sc-1avy0c0-2 kqOUHX"
        href="/details/books/book-slug-1"
      >
        <svg
          aria-hidden="true"
          className="BookBanner__LeftArrow-sc-1avy0c0-0 eRQNag StyledIconBase-sc-bdy9j4 jbPeIR"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
          />
        </svg>
        Test Book 1
      </a>
      <span
        className="BookBanner__BookChapter-sc-1avy0c0-3 iSalIR"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
      />
    </div>
  </div>,
]
`;

exports[`BookBanner renders empty state when passed a page that isn't in the book tree 1`] = `
<div
  className="BookBanner__BarWrapper-sc-1avy0c0-4 enHEEF"
/>
`;

exports[`BookBanner renders empty state with no page or book 1`] = `
<div
  className="BookBanner__BarWrapper-sc-1avy0c0-4 enHEEF"
/>
`;

exports[`BookBanner wrapper transition matches snapshot 1`] = `
<div
  className="BookBanner__BarWrapper-sc-1avy0c0-4 kQRxoX"
/>
`;
